--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             };
 
             try {
-                const response = await fetch('https://ВАШ_URL_N8N/webhook/registration', {
+                const response = await fetch('https://n8nprivate.duckdns.org/webhook/registration', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify(payload)
