Enable user input for chat ID and username fields
Updated form inputs to allow user input and added loading state for the submit button.

--- a/index.html
+++ b/index.html
@@ -4,31 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-               padding: 20px; background-color: var(--tg-theme-bg-color); color: var(--tg-theme-text-color); }
-        .form-group { margin-bottom: 15px; }
-        label { display: block; margin-bottom: 5px; font-size: 14px; opacity: 0.8; }
-        input, select { width: 100%; padding: 12px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; 
-                        background: var(--tg-theme-secondary-bg-color); color: var(--tg-theme-text-color); }
-        button { width: 100%; padding: 15px; background-color: var(--tg-theme-button-color); 
-                 color: var(--tg-theme-button-text-color); border: none; border-radius: 10px; font-weight: bold; cursor: pointer; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            padding: 20px;
+            background-color: var(--tg-theme-bg-color);
+            color: var(--tg-theme-text-color);
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 14px;
+            opacity: 0.8;
+        }
+
+        input, select {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-sizing: border-box;
+            background: var(--tg-theme-secondary-bg-color);
+            color: var(--tg-theme-text-color);
+        }
+
+        button {
+            width: 100%;
+            padding: 15px;
+            background-color: var(--tg-theme-button-color);
+            color: var(--tg-theme-button-text-color);
+            border: none;
+            border-radius: 10px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        button:disabled {
+            opacity: 0.7;
+            cursor: not-allowed;
+        }
+
+        .loader {
+            width: 20px;
+            height: 20px;
+            border: 3px solid rgba(255,255,255,.3);
+            border-top-color: #fff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 0 auto;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
     </style>
 </head>
+
 <body>
     <h3>Регистрация участника</h3>
+
     <div class="form-group">
         <label>ID пользователя</label>
-        <input type="text" id="chat_id" readonly>
+        <!-- 👇 только цифры -->
+        <input
+            type="text"
+            id="chat_id"
+            placeholder="Только цифры"
+            inputmode="numeric"
+            pattern="[0-9]*"
+        >
     </div>
+
     <div class="form-group">
         <label>Логин</label>
-        <input type="text" id="username" readonly>
+        <input type="text" id="username" placeholder="@username">
     </div>
+
     <div class="form-group">
         <label>Дата вступления</label>
         <input type="date" id="start_date">
     </div>
+
     <div class="form-group">
         <label>Срок доступа (мес.)</label>
         <select id="months">
@@ -38,39 +100,112 @@
             <option value="12">12 месяцев</option>
         </select>
     </div>
-    <button onclick="sendData()">Добавить в группу</button>
+
+    <button id="submitBtn" onclick="sendData()">
+        <span class="btn-text">Добавить в группу</span>
+        <span class="loader" hidden></span>
+    </button>
 
     <script>
         const tg = window.Telegram.WebApp;
         tg.expand();
 
-        // Автозаполнение данных из URL
-        const urlParams = new URLSearchParams(window.location.search);
-        document.getElementById('chat_id').value = urlParams.get('id') || '';
-        document.getElementById('username').value = '@' + (urlParams.get('user') || 'unknown');
-        document.getElementById('start_date').value = new Date().toISOString().split('T')[0];
+        const $ = id => document.getElementById(id);
 
+        // === автозаполнение из URL ===
+        const params = new URLSearchParams(location.search);
+        if (params.get('id')) $('chat_id').value = params.get('id').replace(/\D/g, '');
+        if (params.get('user')) $('username').value = '@' + params.get('user');
+
+        $('start_date').value = new Date().toISOString().slice(0, 10);
+
+        // === принудительно только цифры в ID ===
+        $('chat_id').addEventListener('input', e => {
+            e.target.value = e.target.value.replace(/\D/g, '');
+        });
+
+        // === UI helpers ===
+        const btn = $('submitBtn');
+        const btnText = btn.querySelector('.btn-text');
+        const loader = btn.querySelector('.loader');
+
+        function setLoading(state) {
+            btn.disabled = state;
+            btnText.hidden = state;
+            loader.hidden = !state;
+        }
+
+        function notifySuccess(message = 'Данные сохранены') {
+            setLoading(false);
+            alert(message);
+        }
+
+        // === POST with timeout ===
+        async function post(url, payload, timeout = 6000) {
+            const controller = new AbortController();
+            const timer = setTimeout(() => controller.abort(), timeout);
+
+            try {
+                const res = await fetch(url, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(payload),
+                    signal: controller.signal
+                });
+
+                clearTimeout(timer);
+
+                if (res.ok) return;
+                throw new Error(`HTTP ${res.status}`);
+            } catch (e) {
+                clearTimeout(timer);
+                throw e;
+            }
+        }
+
+        // === MAIN ===
         async function sendData() {
+            if (btn.disabled) return;
+
+            let chatId = $('chat_id').value.trim();
+            let username = $('username').value.trim();
+
+            if (!chatId) {
+                alert('ID пользователя должен содержать только цифры');
+                return;
+            }
+
+            if (!username) {
+                alert('Введите логин');
+                return;
+            }
+
+            // гарантируем @
+            if (!username.startsWith('@')) {
+                username = '@' + username;
+                $('username').value = username;
+            }
+
+            setLoading(true);
+
             const payload = {
-                chat_id: document.getElementById('chat_id').value,
-                username: document.getElementById('username').value,
-                start_date: document.getElementById('start_date').value,
-                months: document.getElementById('months').value
+                chat_id: chatId,
+                username: username,
+                start_date: $('start_date').value,
+                months: $('months').value
             };
 
             try {
-                const response = await fetch('https://n8nprivate.duckdns.org/webhook/registration', {
-                    method: 'POST',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify(payload)
-                });
-                
-                if (response.ok) {
-                    tg.showScanQrPopup({text: "Успешно сохранено!"});
-                    setTimeout(() => tg.close(), 1000);
-                }
+                await post(
+                    'https://n8nprivate.duckdns.org/webhook/registration',
+                    payload
+                );
+
+                notifySuccess();
             } catch (e) {
-                alert("Ошибка связи с n8n");
+                setLoading(false);
+                alert('Ошибка связи с n8n');
+                console.error(e);
             }
         }
     </script>
